==> loboris/MICO/Platform/MCU/LPC5410x/peripherals/platform_i2c.c <==
#include "mico_platform.h"
#include "mico_rtos.h"
#include "platform.h"
#include "platform_peripheral.h"
#include "chip.h"
#include "PlatformLogging.h"
#define I2C_FLAG_CHECK_TIMEOUT      ( 1000 )
#define I2C_FLAG_CHECK_LONG_TIMEOUT ( 1000 )
#define  I2C_Direction_Transmitter      ((uint8_t)0x00) // Wecan Modify 2015.06.05
#define  I2C_Direction_Receiver         ((uint8_t)0x01) // Wecan Modify 2015.06.05
#define DMA_FLAG_TC(stream_id) dma_flag_tc(stream_id)
#define DMA_TIMEOUT_LOOPS      (10000000)

OSStatus platform_i2c_init(const platform_i2c_t* i2c, const platform_i2c_config_t* config )
{
	OSStatus err = kNoErr;
	LPC_I2C_T *pI2C;
	#ifndef BOOTLOADER
	platform_i2c_cb_t *pCtx = i2c->pCtx;
#endif
	// platform_mcu_powersave_disable( );
	require_action_quiet( (i2c != NULL && i2c->hwNdx < MICO_I2C_MAX && config != NULL && config->address_width == I2C_ADDRESS_WIDTH_7BIT), exit, err = kParamErr);

	pI2C = i2c->port;

	#ifndef BOOTLOADER
    if (NULL == pCtx->semXfer)
        mico_rtos_init_semaphore(&pCtx->semXfer, 1);
	if (NULL == pCtx->mtxXfer)
        mico_rtos_init_mutex(&pCtx->mtxXfer);
	#endif

	// Init & Reset I2C clocks Wecan modify 2015.06.03
	Chip_I2C_Init(i2c->port);//(LPC_I2C_PORT);

	_prvI2CHwCfg(i2c, config);

    Chip_I2CM_Enable(pI2C);
    NVIC_EnableIRQ((IRQn_Type)i2c->irqNdx);

exit:
	// platform_mcu_powersave_enable( );
	return err;
}

OSStatus platform_i2c_init_tx_message( platform_i2c_message_t* message, const void* tx_buffer, uint16_t tx_buffer_length, uint16_t retries )
{
	OSStatus err = kNoErr;

	require_action_quiet( ( message != NULL ) && ( tx_buffer != NULL ) && ( tx_buffer_length != 0 ), exit, err = kParamErr);

	memset(message, 0x00, sizeof(mico_i2c_message_t));
	message->rx_buffer = 0;
	message->tx_buffer = tx_buffer;
	message->retries = retries;
	message->tx_length= tx_buffer_length;
	message->rx_length= 0;
	message->combined = 0;


exit:
	return err;
}

OSStatus platform_i2c_init_rx_message( platform_i2c_message_t* message, void* rx_buffer, uint16_t rx_buffer_length, uint16_t retries )
{
	OSStatus err = kNoErr;

	require_action_quiet( ( message != NULL ) && ( rx_buffer != NULL ) && ( rx_buffer_length != 0 ), exit, err = kParamErr);

	memset(message, 0x00, sizeof(mico_i2c_message_t));
	message->rx_buffer = rx_buffer;
	message->tx_buffer = 0;
	message->retries = retries;
	message->tx_length= 0;
	message->rx_length= rx_buffer_length;
	message->combined = 0;



exit:
	return err;
}

OSStatus platform_i2c_init_combined_message( platform_i2c_message_t* message, const void* tx_buffer, void* rx_buffer, uint16_t tx_buffer_length, uint16_t rx_buffer_length, uint16_t retries )
{
	OSStatus err = kNoErr;

	require_action_quiet( ( message != NULL ) && ( tx_buffer != NULL ) && ( tx_buffer_length != 0 ) && ( rx_buffer != NULL ) && ( rx_buffer_length != 0 ), exit, err = kParamErr);

	memset(message, 0x00, sizeof(mico_i2c_message_t));
	message->rx_buffer = rx_buffer;
	message->tx_buffer = tx_buffer;
	message->retries = retries;
	message->tx_length= tx_buffer_length;
	message->rx_length= rx_buffer_length;
	message->combined = 1;

exit:
	return err;
}

OSStatus platform_i2c_transfer(const platform_i2c_t* i2c, const platform_i2c_config_t* config, platform_i2c_message_t* messages, uint16_t number_of_messages )
{
	OSStatus err = kNoErr;
	int      i   = 0, retryCnt;
	platform_i2c_cb_t *pCtx = i2c->pCtx;
	// platform_mcu_powersave_disable();

	require_action_quiet( i2c != NULL, exit, err = kParamErr);

	#ifndef BOOTLOADER
		mico_rtos_lock_mutex(&pCtx->mtxXfer);
	#endif

    pCtx->slaveAddr = config->address;
    pCtx->pDev = i2c;

	for( i=0; i < number_of_messages; i++ )
	{
		_prvI2CHwCfg(i2c, config);
		for (retryCnt = 0; retryCnt < messages[i].retries; retryCnt++)
		{
			MyI2CM_Xfer(i2c, messages + i);
            /* Enable Master Interrupts */
            Chip_I2C_EnableInt(i2c->port, I2C_INTENSET_MSTPENDING | I2C_INTENSET_MSTRARBLOSS | I2C_INTENSET_MSTSTSTPERR);
			/* Wait for transfer completion */
			err = WaitForI2cXferComplete(i2c, messages + i);

			if (err == kNoErr)
				break;
		}
		if (err != kNoErr)
			break;
	}
exit:
	#ifndef BOOTLOADER
		mico_rtos_unlock_mutex(&pCtx->mtxXfer);
	#endif

	// platform_mcu_powersave_enable();
	return err;
}

bool platform_i2c_probe_device(const platform_i2c_t* i2c, const platform_i2c_config_t* config, int retries )
{
	OSStatus err = kNoErr;
	platform_i2c_message_t msg;
	memset(&msg, 0, sizeof(msg));
    msg.retries = retries;
	i2c->pCtx->isProbe = 1;
	err = platform_i2c_transfer(i2c, config, &msg, 1);
    return err;
}

OSStatus platform_i2c_deinit(const platform_i2c_t* i2c, const platform_i2c_config_t* config )
{
	UNUSED_PARAMETER( config );
	OSStatus err = kNoErr;
#ifndef BOOTLOADER
	platform_i2c_cb_t *pCtx = i2c->pCtx;
#endif


	require_action_quiet( i2c != NULL, exit, err = kParamErr);

	// Wecan Todo 2015.06.04
	Chip_I2C_DeInit( i2c->port );         //Disable I2C peripheral clockss
#ifndef BOOTLOADER
    if (NULL != pCtx->semXfer)
        mico_rtos_deinit_semaphore(&pCtx->semXfer);
	if (NULL != pCtx->mtxXfer)
        mico_rtos_deinit_mutex(&pCtx->mtxXfer);
    pCtx->semXfer = NULL;
    pCtx->mtxXfer = NULL;
#endif

exit:
	return err;
}
